--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Simpel Filhåndtering</string>
+    <string name="app_name">Filhåndtering</string>
     <string name="app_launcher_name">Filhåndtering</string>
     <string name="press_back_again">Tryk tilbage igen for at afslutte</string>
     <string name="go_to_home_folder">Gå til hjemmemappen</string>
