--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Simple File Manager</string>
+    <string name="app_name">File Manager</string>
     <string name="app_launcher_name">Gerenciador de Arquivos</string>
     <string name="press_back_again">Aperte novamente o botão Voltar para sair</string>
     <string name="go_to_home_folder">Ir para pasta principal</string>
